exports[`<UserMenu /> opens and closes when clicked 1`] = `
<li
  className="sc-dnqmqq fgXeCH"
  onClick={[Function]}
  onMouseLeave={[Function]}>
  <ul
    className="sc-htoDjs cRiYQQ sc-bdVaJa uaJWD"
    open={false} />
</li>
`;

exports[`<UserMenu /> opens and closes when clicked 2`] = `
<li
  className="sc-dnqmqq fgXeCH"
  onClick={[Function]}
  onMouseLeave={[Function]}>
  <ul
    className="sc-htoDjs cRiYQQ sc-bdVaJa hrCPNf"
    open={true} />
</li>
`;

exports[`<UserMenu /> renders correctly with default options 1`] = `
<li
  className="sc-dnqmqq fgXeCH"
  onClick={[Function]}
  onMouseLeave={[Function]}>
  <ul
    className="sc-htoDjs cRiYQQ sc-bdVaJa uaJWD"
    open={false} />
</li>
`;

exports[`<UserMenu /> renders correctly with image 1`] = `
<li
  className="sc-dnqmqq fgXeCH"
  onClick={[Function]}
  onMouseLeave={[Function]}>
  <img
    className="sc-bwzfXH fQDxRm"
    src="/some/path" />
  <span
    className="sc-htpNat eEPncd" />
  <ul
    className="sc-htoDjs cRiYQQ sc-bdVaJa uaJWD"
    open={false}>
    <li
      className="sc-bxivhb lgaxW">
      <img
        className="sc-ifAKCX iAcooV"
        src="/some/path" />
    </li>
  </ul>
</li>
`;

exports[`<UserMenu /> renders correctly with name 1`] = `
<li
  className="sc-dnqmqq fgXeCH"
  onClick={[Function]}
  onMouseLeave={[Function]}>
  <img
    className="sc-bwzfXH fQDxRm"
    src={undefined} />
  <span
    className="sc-htpNat eEPncd">
    Another name
  </span>
  <ul
    className="sc-htoDjs cRiYQQ sc-bdVaJa uaJWD"
    open={false}>
    <li
      className="sc-bxivhb lgaxW">
      <p
        className="sc-EHOje dMSiCa">
        Another name
      </p>
    </li>
  </ul>
</li>
`;

exports[`<UserMenu /> renders correctly with theme 1`] = `
<li
  className="sc-dnqmqq kkSNAT"
  onClick={[Function]}
  onMouseLeave={[Function]}>
  <ul
    className="sc-htoDjs cRiYQQ sc-bdVaJa uaJWD"
    open={false} />
</li>
`;
